# 1000th-summer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  test.wav.reapeaks
src/: main.cpp
src/cli-utils/: cli.h  init-tools.cpp  parse.cpp
src/tools/: bang.cpp  derivative.cpp  distort.cpp  epic.cpp  exp.cpp  exponent.cpp  fft.cpp  flanger.cpp  hypot.cpp  hypotenuse.cpp  integral.cpp  leftshift.cpp  maximum.cpp  minimum.cpp  modulo.cpp  monotostereo.cpp  multiply.cpp  newblur.cpp  normalize.cpp  phaser.cpp  randgen.cpp  rawdata.cpp  rightshift.cpp  scatter.cpp  softclip.cpp  sort.cpp  taylor.cpp  tools.h  transientfinder.cpp  weird.cpp
src/tools/img-tools/: blur.cpp  img.h  img2wav.cpp  laplace.cpp  wav2img.cpp
